--- a/Engine/Source/Programs/UnrealVS/ReleaseNotes.txt
+++ b/Engine/Source/Programs/UnrealVS/ReleaseNotes.txt
@@ -1,6 +1,9 @@
+1.71 (WIP)
+* fixed exception when opening project missing a referenced configuration
+* added exceptions to guard against code UI code not being accessed on the UI thread
+
 1.70
 * add option to allow async checkout
 * resolved concurrent command issues
 * fix issue with P4V commands waiting for exit
 * resolve issue where Checkout on Edit was not honoring the user option
-
