--- a/Engine/Source/Programs/UnrealVS/ReleaseNotes.txt
+++ b/Engine/Source/Programs/UnrealVS/ReleaseNotes.txt
@@ -1,6 +1,10 @@
-1.71 (WIP)
+1.72 (WIP)
 * fixed exception when opening project missing a referenced configuration
 * added exceptions to guard against code UI code not being accessed on the UI thread
+
+1.71
+* add p4FastReconcile
+* add ability to halt p4 output auto focus
 
 1.70
 * add option to allow async checkout
